--- a/src/components/StatsCard.css
+++ b/src/components/StatsCard.css
@@ -43,10 +43,13 @@
   height: 100%;
   width: 100%;
   background-color: rgba(170, 92, 219, 0.7);
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 .stats-card-img-container img {
   width: 100%;
+  height: 100%;
   border-top-right-radius: 12px;
   border-bottom-right-radius: 12px;
 }
@@ -74,6 +77,12 @@
   .stats-card-img-container,
   .stats-card-desc {
     width: 100%;
+  }
+
+  .img-overlay,
+  .stats-card-img-container img {
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 12px;
   }
 
   .stats-card {
